--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,21 @@
+body {
+    width: 100%;
+    height: 100%;
+}
 
-
+.container {
+    width: 400px;
+    height: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    padding: auto;
+    justify-content: center;
+    align-items: center;
+    gap: 6px;
+}
 button {
-    width: 50px;
-    height: 20px;
+    width: 80px;
+    height: 80px;
+    border-radius: 10px;
 }
