--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@ body {
 }
 
 .container {
-    width: 400px;
-    height: 600px;
+    width: 480px;
+    height: 700px;
     display: flex;
     flex-wrap: wrap;
     margin: auto;
@@ -13,7 +13,19 @@ body {
     justify-content: center;
     align-items: center;
     gap: 6px;
+    border: 2px solid black;
+    border-radius: 20px;
 }
+
+.calcDisplay {
+    height: 80px;
+    width: 80%;
+    background-color: rgba(128, 128, 128, 0.2);
+    border-radius: 10px;
+    padding: 10px;
+    margin: 0px;
+}
+
 button {
     width: 80px;
     height: 80px;
