--- a/styles.css
+++ b/styles.css
@@ -15,19 +15,25 @@ body {
     gap: 6px;
     border: 2px solid black;
     border-radius: 20px;
+    background-color: darkslategrey;
 }
 
 .calcDisplay {
+    display: flex;
     height: 80px;
     width: 80%;
-    background-color: rgba(128, 128, 128, 0.2);
+    background-color: rgba(255, 255, 255, 0.5);
     border-radius: 10px;
     padding: 10px;
     margin: 0px;
+    justify-content: right;
+    align-items: end;
+    font-size: 30px;
 }
 
 button {
     width: 80px;
     height: 80px;
     border-radius: 10px;
+    font-size: 30px;
 }
