Finished current design for calculator, added fixed 2 decimal points for number result

--- a/styles.css
+++ b/styles.css
@@ -4,36 +4,44 @@ body {
 }
 
 .container {
-    width: 480px;
-    height: 700px;
+    width: 400px;
+    height: 620px;
     display: flex;
     flex-wrap: wrap;
     margin: auto;
-    padding: auto;
+    padding: 18px;
+    gap: 10px;
     justify-content: center;
     align-items: center;
-    gap: 6px;
     border: 2px solid black;
     border-radius: 20px;
     background-color: darkslategrey;
+    flex: 1;
 }
 
 .calcDisplay {
     display: flex;
     height: 80px;
-    width: 80%;
+    width: 90%;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 10px;
     padding: 10px;
-    margin: 0px;
+    margin: 16px;
     justify-content: right;
     align-items: end;
-    font-size: 30px;
+    font-size: 40px;
+}
+
+#equals {
+    flex: 2 1 auto;
 }
 
 button {
     width: 80px;
     height: 80px;
     border-radius: 10px;
-    font-size: 30px;
+    font-size:30px;
+    flex: 1 1 auto;
+    color: khaki;
+    background-color: black;
 }
